src/test/Success/test_init.c
int main(){
    int i = 4;
    int j = i;

    int a[3];
    int b[3] = {1, 2, 3};
    int c[1] = {a[2]};
    return 0;
}