src/test/Fail/test_bug.c
int main(){
    int a[100], b;
    a[1] = a;
}